搜尋介面優化

--- a/iDrink/promotion.html
+++ b/iDrink/promotion.html
@@ -9,7 +9,7 @@
 }
 </style></head>
 
-<body>
+<body background="images/background.jpg">
 <h1 align="center"><img src="images/recentPromo.jpg" width="589" height="291" /></h1>
 <ul >
   <li> <h2>星巴克</h2>  </li>
@@ -18,7 +18,11 @@
     <li><a href="http://goodlife.tw/topics/155476-%E6%98%9F%E5%B7%B4%E5%85%8B-1-8~1-17-%E8%B2%B7%E5%85%A9%E5%8C%85%E5%92%96%E5%95%A1%E8%B1%86%E5%86%8D%E9%80%81%E4%B8%80%E5%8C%85" target="_top"> 1/8~1/17  買兩包咖啡豆再送一包</a></li>
   </ol> <img src="images/starbucks.jpg" width="372" height="247" />
   <li><h2>50嵐</h2> </li>
-  <li><h2>COMEBUY</h2></li>
+  <li><h2>COMEBUY</h2>
+    <ol>
+      <li><a href="http://www.comebuy2002.com.tw/news/detail.php?Key=125" target="_top">A+B 一起省</a></li>
+    </ol>
+  </li>
 </ul>
 </body>
 </html>
