Update FB initialization

--- a/FB_notes.html
+++ b/FB_notes.html
@@ -15,10 +15,9 @@
             window.fbAsyncInit = function() {
                 // 宣告 FB JS SDK
                 FB.init({
-                    appId      : FacebookAppId,    // App ID from the app dashboard
-                    cookie     : true,             // Allowed server-side to fetch fb auth cookie
-                    status     : true,             // Check Facebook Login status
-                    xfbml      : true              // Look for social plugins on the page
+                    appId      : 716678975030552,   // App ID from the app dashboard
+                    status     : true,              // Check Facebook Login status
+                    xfbml      : true               // Look for social plugins on the page
                     });
                         
                 // Additional initialization code such as adding Event Listeners goes here
