Update meta flag

--- a/FB_notes.html
+++ b/FB_notes.html
@@ -1,11 +1,12 @@
 
 <html>
     <head>
-        <!-- BLOCK: Loading libraries -->
-        <!-- 讀取"FB_id.js"檔的FB id -->
-        <script src="./FB_id.js"></script>
-        <script src="../FB_id.js"></script>
-        <!-- ENDBLOCK: Loading libraries -->
+        <meta property="og:title" content="iDrink, fantastic evaluation" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="http://idrink.comoj.com/images/iDrink.gif" />
+        <meta property="og:url" content="http://idrink.comoj.com/" />
+        <meta property="og:description" content="Wonder whether the drink you have is awesome or awful? Visit iDrink, and you will get the point." />
+        <meta property="fb:app_id" content="716678975030552" />
     </head>
 
     <body>
